<resources>
    <string name="app_name">Ticky</string>
    <string name="get_started_1">Get started</string>
    <string name="hey_i_m_ticky">Hey, I’m Ticky!</string>
    <string name="i_know_you_ve_got_many_things_to_do_but_i_m_here_to_help_you_organize">I know you’ve got many things to do but I’m here to help you organize</string>
    <string name="s">S</string>
    <string name="f">F</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="july_2020">July , 2020</string>
    <string name="add_some_tasks_don_t_make_me_bored">Add some tasks,don\'t make me bored</string>
    <string name="todo">TODO</string>
    <string name="stuff_to_do">Stuff to do?</string>
    <string name="back">Back</string>
    <string name="new_task">New task</string>
    <string name="to_do">To do</string>
    <string name="red">#ff453a</string>
    <string name="orange">#ff9f0c</string>
    <string name="yellow">#ffd50c</string>
    <string name="green">#32d74b</string>
    <string name="lightblue">#64d2ff</string>
    <string name="blue">#0984ff</string>
    <string name="bluedark">#5e5ce6</string>
    <string name="purple">#bf5af2</string>
    <string name="rose">#ff375f</string>
    <string name="sort_by">sort by</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="completed">Completed</string>
    <string name="strike_text">1. <strike>StrikeThrough</strike> Using strike</string>
    <string name="firstscreentext">Add some tasks, don\'t make me bored</string>
    <string name="type_your_text_here">Type your text here</string>
    <string name="sort_by_123">Sort by:</string>
    <string name="date_added">Date added</string>
    <string name="due_date">Due date</string>
    <string name="color_label">Color label</string>
    <string name="sharedchars">shared_char_mainpage</string>
    <string name="posterImage">poster %s</string>
    <string name="releaseDate">date %s</string>
    <string name="rating">rating %s</string>
    <string name="cancel">Cancel</string>
    <string name="edit_task">Edit task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>