<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"

    >

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/sort_by_123"
            android:textColor="#1e212b"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/date_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:buttonTint="@android:color/black"
            android:enabled="true"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/date_added"
            android:textColorHint="@android:color/black"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:buttonTint="@android:color/black"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/due_date"
            android:textColorHint="@android:color/black"

            android:textSize="14sp" />

        <RadioButton

            android:id="@+id/color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:buttonTint="@android:color/black"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/color_label"
            android:textColorHint="@android:color/black"

            android:textSize="14sp" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>