<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/tralivali"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:fontFamily="@font/ubuntu_bold"

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_i_m_ticky"
        android:textColor="#1e212b"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="44dp"
        />

    <TextView
        android:id="@+id/onboarding_button1"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/fill_screen_black"
        app:layout_constraintBottom_toBottomOf="@+id/onboarding_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bitmap" />

    <TextView
        android:fontFamily="@font/ubuntu_light"

        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="61dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="12sp"
        android:text="@string/i_know_you_ve_got_many_things_to_do_but_i_m_here_to_help_you_organize"
        android:textColor="#1e212b"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/white_circular"
        android:layout_width="19dp"
        android:layout_height="23dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/fill_screen_white"
        android:fontFamily="@font/ubuntu_medium"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:fontFamily="@font/ubuntu_medium"
        android:id="@+id/onboarding_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/disabled_save_button"
        android:drawableLeft="@drawable/invalid_name"
        android:drawablePadding="8dp"
        android:text="@string/get_started_1"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"

        />



</androidx.constraintlayout.widget.ConstraintLayout>